@@ -26,6 +26,8 @@ Bug fixes:
 * A bug in handling stat lookup errors was fixed. Reported by
   Peter Palfrader. Symptom: `AttributeError: 'exceptions.OSError'
   object has no attribute 'st_ino'` in an error message or log file.
+* A bug in a restore crashing when failing to set extended attributes
+  on the restored file was fixed. Reported by "S. B.".
 
 Version 1.3, released 2012-12-16
 --------------------------------
